usr/src/uts/common/fs/zfs/vdev.c
@@ -4230,9 +4230,21 @@ vdev_is_bootable(vdev_t *vd)
 
 		if (strcmp(vdev_type, VDEV_TYPE_ROOT) == 0 &&
 		    vd->vdev_children > 1) {
-			return (B_FALSE);
-		} else if (strcmp(vdev_type, VDEV_TYPE_MISSING) == 0 ||
-		    strcmp(vdev_type, VDEV_TYPE_INDIRECT) == 0) {
+			int non_indirect = 0;
+
+			for (int c = 0; c < vd->vdev_children; c++) {
+				vdev_type =
+				    vd->vdev_child[c]->vdev_ops->vdev_op_type;
+				if (strcmp(vdev_type, VDEV_TYPE_INDIRECT) != 0)
+					non_indirect++;
+			}
+			/*
+			 * non_indirect > 1 means we have more than one
+			 * top-level vdev, so we stop here.
+			 */
+			if (non_indirect > 1)
+				return (B_FALSE);
+		} else if (strcmp(vdev_type, VDEV_TYPE_MISSING) == 0) {
 			return (B_FALSE);
 		}
 	}
